--- a/package.json
+++ b/package.json
@@ -4,15 +4,26 @@
   "description": "",
   "main": "server.mjs",
   "scripts": {
-    "start": "nodemon --experimental-modules ./src/server.mjs"
+    "build": "rimraf ./dist && babel ./src -d ./dist",
+    "prestart": "npm run -s build",
+    "dev": "nodemon -w src --exec \"babel-node src/server.js\"",
+    "start": "node dist/server.js"
   },
   "author": "Bartlomiej Kotarski",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.8.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.12",
     "nodemon": "^2.0.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "rimraf": "^3.0.2"
+  }
 }
